Revision history for WWW::Mechanize

{{$NEXT}}

2.19      2024-09-16 15:25:45Z
    [DOCUMENTATION]
    - Fix minor typo in SYNOPSIS example code comment (GH#379) (Paul Cochrane)
    [ENHANCEMENTS]
    - Replace "base" with "parent" (GH#381) (James Raspass)

2.18      2024-01-30 14:29:44Z
    [FIXED]
    - Fix click_button non exclusive attributes (GH#371) (Andreas  Huber)
    [TESTS]
    - Remove t/untaint.t (GH#377) (Olaf Alders)

2.17      2023-04-27 15:45:01Z
    [ENHANCEMENTS]
    - Perltidied the entire dist, and enabled tests for it (Julien Fiegehenn)

2.16      2023-02-11 12:09:16Z
    [FIXED]
    - Raise minimum Perl to 5.8 to match what we test, what dependencies
      depend on, etc. (GH#352) (James Raspass)
    [ENHANCEMENTS]
    - New method delete() that allows DELETE requests with Mechanize::Link
      objects (GH#361) (Stuart A Johnston)
    [DOCUMENTATION]
    - Clarify documentation for select() (GH#77) (Julien Fiegehenn)
    - Various POD fixes (Julien Fiegehenn)
    - Explain that :content-file does not decode content (GH#363) (bscan)
    [TESTS]
    - Test that follow_link(n=> 'all') warns (Kueppo Tcheukam)
    - Drop Test::Warn prerequisite and only use Test::Warnings (GH#360) (Graham Knop)

2.15      2022-08-21 07:47:35Z
    [FIXED]
    - There was a test suite failure on some Windows machines introduced in
      2.14 that is now fixed. (GH#350) (Julien Fiegehenn)

    [ENHANCEMENTS]
    - form_with and all_forms_with() now support the "action" attribute to find
      forms (GH#349) (Julien Fiegehenn)

2.14      2022-08-15 19:19:24Z
    [FIXED]
    - File upload fields now correctly handle overwriting the file name and
      passing in content without a real file (GH#249) (Gil Magno and Julien
      Fiegehenn)
    - HTML::Form bumped to 6.08 (GH#347) (Julien Fiegehenn)

    [ENHANCEMENTS]
    - Add autocheck() to enable or disable autochecking at run time in
      addition to setting it at object creation (GH#232) (Julien Fiegehenn)